# zmake

./: .gitignore  Cargo.toml  DESIGN.md  README.md  tests.ps1
src/: main.rs
src/api/: file_finder.rs  mod.rs  target.rs
ts/: compile.ts  core.ts  project.tsconfig.json  rt.ts  tsconfig.json
types/: console.d.ts  core.d.ts  project.d.ts  semver.d.ts  workspace.d.ts  zmake.d.ts
zmake_cli/: .gitignore  Cargo.toml  build.rs
zmake_cli/src/: main.rs
zmake_lib/: Cargo.toml  build.rs
zmake_lib/src/: access_control.rs  build_constants.rs  cas.rs  cas_server.rs  configuration.rs  digest.rs  engine.rs  error.rs  file_finder.rs  fs.rs  id.rs  lib.rs  local_cas.rs  make_builtin.rs  module_loader.rs  module_specifier.rs  pattern.rs  project.rs  project_resolver.rs  socket_address.rs  target.rs  transformer.rs  transport_server.rs  version_extractor.rs
zmake_lib/src/builtin/: c.rs  cpp.rs  mod.rs
zmake_lib/src/builtin/id/: c.rs  cpp.rs  mod.rs
zmake_lib/src/builtin/js/: mod.rs
zmake_lib/src/path/: mod.rs
zmake_lib/src/proto/: net.proto  transport.proto
