[workspace]
members = ["zmake_lib", "zmake_cli"]
resolver = "3"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
clap = { version = "4.5", features = [
    "derive",
    "cargo",
    "unicode",
    "wrap_help",
] }
semver = { version = "1.0", features = ["serde"] }
unicode-ident = "1.0.22"
thiserror = "2"
cfg-if = "1.0.4"
num_cpus = "1.17.0"
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-subscriber = "0.3.20"
serde = "1.0"
const_format = "0.2.35"
serde_json = "1.0"
ahash = "0.8.12"
argfile = "0.2"
lenient_semver = "0.4.2"

opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = "0.31.0"
tracing-opentelemetry = "0.32.0"

static_init = "1.0.4"

convert_case = "0.9.0"

tokio = { version = "1.48.0", features = ["full"] }

tracing-attributes = "0.1.24"

glob = "0.3.3"

bitflags = "2.10.0"

strum = "0.27"
strum_macros = "0.27"

colorchoice-clap = "1.0.7"

eyre = "0.6"
color-eyre = "0.6"
colorchoice = "1.0.4"

url = "2.5.7"

v8 = "142.1.0"

exit-code = "1.0"

xxhash-rust = "0.8.15"

sha2 = "0.10.9"

hex = "0.4.3"

async-trait = "0.1.89"

shadow-rs = "1.4"
clap_complete = "4.5.61"

prost = "0.14"
prost-types = "0.14"
tonic-prost-build = "0.14.2"
tonic = "0.14.2"
tonic-prost = "0.14.2"

tarpc = "0.37"

tokio-stream = "0.1"

dashmap = { version = "6.1.0" }

uuid = { version = "1.18.1", features = ["v4"] }

quinn = "0.11.9"

rustls = { version = "0.23.35", default-features = false, features = [
    "ring",
    "std",
] }

ring = { version = "0.17.14", features = ["alloc", "std", "brotli", "zstd"] }

[workspace.package]
version = "0.1.0"
authors = ["MoeGodot <me@kawayi.moe>"]
description = "The post-modern building tool that your mom warned you about."
documentation = "https://github.com/moegodot/zmake-rust"
repository = "https://github.com/moegodot/zmake-rust"
homepage = "https://github.com/moegodot/zmake-rust"
edition = "2024"
license = "GPL-3.0-or-later"
