[workspace]
members = ["zmake_lib", "zmake_cli"]
resolver = "3"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
clap = { version = "4.5", default-features = true, features = [
    "derive",
    # 若不是从天上赐的，clap就不能得什么:
    # "cargo",
    # "env",
    "unicode",
    "wrap_help",
] }
semver = { version = "1.0", features = ["serde"] }
unicode-ident = "1.0.22"
thiserror = "2"
cfg-if = "1.0.4"
num_cpus = "1.17.0"
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-subscriber = "0.3.20"
serde = "1.0"
const_format = "0.2.35"
serde_json = "1.0"
ahash = "0.8.12"
argfile = "0.2"
lenient_semver = "0.4.2"

zip = "6.0.0"

tracing-error = "0.2.1"

opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = "0.31.0"
tracing-opentelemetry = "0.32.0"

static_init = "1.0.4"

convert_case = "0.9.0"

tokio = { version = "1.48.0", features = ["full"] }

tracing-attributes = "0.1.24"

glob = "0.3.3"
strum = {version="0.27",features=["derive"]}

colorchoice-clap = "1.0.7"

eyre = "0.6"
color-eyre = "0.6"
colorchoice = "1.0.4"

url = "2.5.7"

futures = "0.3.31"
futures-util = "0.3.31"

v8 = "142.1.0"
serde_v8 = "=0.278.0"

smallvec = "1.15.1"

oxc = { version = "0.94.0", features = ["full"], default-features = true }

exit-code = "1.0"

bytes = "1.11.0"

async-stream = "0.3.6"

xxhash-rust = "0.8.15"

sha2 = "0.10.9"

hex = "0.4.3"

async-trait = "0.1.89"

shadow-rs = "1.4"
clap_complete = "4.5.61"

reqwest = { version = "0.12", features = ["json","blocking","json","gzip","brotli","zstd","deflate","stream","socks","default-tls","native-tls"] }
indicatif = "0.18.3"

prost = "0.14"
prost-types = "0.14"
tonic-prost-build = "0.14.2"
tonic = "0.14.2"
tonic-prost = "0.14.2"

tokio-stream = "0.1"

dashmap = { version = "6.1.0" }

uuid = { version = "1.18.1", features = ["v4"] }

tokio-util = "0.7.17"

tracing-tree = "0.4.1"

[workspace.package]
version = "0.1.0"
authors = ["MoeGodot <me@kawayi.moe>"]
description = "The post-modern building tool that your mom warned you about."
documentation = "https://github.com/moegodot/zmake-rust"
repository = "https://github.com/moegodot/zmake-rust"
homepage = "https://github.com/moegodot/zmake-rust"
edition = "2024"
license = "GPL-3.0-or-later"
